CORE-42410: Handled swatch images on plp for cos and hm.

--- a/docroot/modules/brands/alshaya_hm/modules/alshaya_hm_transac_rcs/alshaya_hm_transac_rcs.libraries.yml
+++ b/docroot/modules/brands/alshaya_hm/modules/alshaya_hm_transac_rcs/alshaya_hm_transac_rcs.libraries.yml
@@ -20,3 +20,10 @@ product.block.short_description.pdp-magazine:
   version: 1.x
   js:
     templates/rcs-product-short-description-full-magazine-block.handlebars: { }
+
+plp:
+  version: 1.x
+  js:
+    js/alshaya_hm_transac_rcs_plp.js: {}
+  dependencies:
+    - rcs_placeholders/helpers
