CORE-42974: Move Handlebar templates to its own folder. Updated dependencies for RCS Brand modules.

--- a/docroot/modules/brands/alshaya_cos/modules/alshaya_cos_transac_rcs/alshaya_cos_transac_rcs.info.yml
+++ b/docroot/modules/brands/alshaya_cos/modules/alshaya_cos_transac_rcs/alshaya_cos_transac_rcs.info.yml
@@ -2,3 +2,5 @@ name: Alshaya COS Transac RCS
 description: Enables RCS for COS.
 type: module
 core_version_requirement: ^9
+dependencies:
+  - alshaya_cos:alshaya_cos_transac
