--- a/docroot/modules/brands/alshaya_dh/modules/alshaya_dh_transac_rcs/alshaya_dh_transac_rcs.info.yml
+++ b/docroot/modules/brands/alshaya_dh/modules/alshaya_dh_transac_rcs/alshaya_dh_transac_rcs.info.yml
@@ -3,3 +3,5 @@ description: Enables RCS for Debenhams.
 type: module
 core: 8.x
 core_version_requirement: ^8 || ^9
+dependencies:
+  - alshaya_dh:alshaya_dh_transac
