--- a/docroot/modules/brands/alshaya_hm/modules/alshaya_hm_transac_rcs/alshaya_hm_transac_rcs.info.yml
+++ b/docroot/modules/brands/alshaya_hm/modules/alshaya_hm_transac_rcs/alshaya_hm_transac_rcs.info.yml
@@ -3,3 +3,5 @@ description: Enables RCS for HM.
 type: module
 core: 8.x
 core_version_requirement: ^8 || ^9
+dependencies:
+  - alshaya_hm:alshaya_hm
