--- a/docroot/modules/brands/alshaya_tbs/modules/alshaya_tbs_transac_rcs/alshaya_tbs_transac_rcs.info.yml
+++ b/docroot/modules/brands/alshaya_tbs/modules/alshaya_tbs_transac_rcs/alshaya_tbs_transac_rcs.info.yml
@@ -3,3 +3,5 @@ description: Enables RCS for TBS.
 type: module
 core: 8.x
 core_version_requirement: ^8 || ^9
+dependencies:
+  - alshaya_tbs:alshaya_tbs_transac
