--- a/docroot/modules/custom/alshaya_pims/modules/alshaya_pims_assets/alshaya_pims_assets.libraries.yml
+++ b/docroot/modules/custom/alshaya_pims/modules/alshaya_pims_assets/alshaya_pims_assets.libraries.yml
@@ -3,3 +3,4 @@ swatch:
     js/alshaya_assets_swatch.js: {}
   dependencies:
     - rcs_placeholders/helpers
+    - alshaya_acm_product/product_utility
