CORE-42623: [Drupal - FE - Mobile] - Provide collapsable sticky CTA for BNPL payment option.

--- a/docroot/themes/custom/transac/alshaya_hnm/alshaya_hnm.libraries.yml
+++ b/docroot/themes/custom/transac/alshaya_hnm/alshaya_hnm.libraries.yml
@@ -5,6 +5,7 @@ global_styles:
   js:
     js/form.js: {}
     js/custom_overrides.js: {}
+    /libraries/mobile-detect/mobile-detect.js: {}
   dependencies:
     - core/jquery
     - core/jquery.once
