--- a/docroot/modules/react/alshaya_hello_member/alshaya_hello_member.services.yml
+++ b/docroot/modules/react/alshaya_hello_member/alshaya_hello_member.services.yml
@@ -3,3 +3,4 @@ services:
     class: Drupal\alshaya_hello_member\Helper\HelloMemberHelper
     arguments:
       - '@config.factory'
+      - '@mobile_number.util'
