--- a/docroot/modules/custom/alshaya_mobile_app/alshaya_mobile_app.services.yml
+++ b/docroot/modules/custom/alshaya_mobile_app/alshaya_mobile_app.services.yml
@@ -20,6 +20,7 @@ services:
       - '@database'
       - '@alshaya_super_category.super_category_feature_manager'
       - '@path.validator'
+      - '@alshaya_acm_product_category.page'
   alshaya_mobile_app.utility.paragraphs:
     class: Drupal\alshaya_mobile_app\Service\MobileAppUtilityParagraphs
     decorates: alshaya_mobile_app.utility
@@ -48,6 +49,7 @@ services:
       - '@database'
       - '@alshaya_super_category.super_category_feature_manager'
       - '@path.validator'
+      - '@alshaya_acm_product_category.page'
   alshaya_mobile_app.alshaya_search_api_query_execute:
     class: Drupal\alshaya_mobile_app\Service\AlshayaSearchApiQueryExecute
     arguments:
