--- a/docroot/modules/custom/alshaya_mobile_app/config/schema/alshaya_mobile_app.settings.yml
+++ b/docroot/modules/custom/alshaya_mobile_app/config/schema/alshaya_mobile_app.settings.yml
@@ -14,3 +14,6 @@ alshaya_mobile_app.settings:
     listing_ignore_algolia_data:
       type: boolean
       label: 'Dont respond product if config is true.'
+    trigger_algolia_category_carousel:
+      type: boolean
+      label: 'Call algolia for category carousel if config is true.'
