--- a/docroot/modules/react/alshaya_spc/alshaya_spc.libraries.yml
+++ b/docroot/modules/react/alshaya_spc/alshaya_spc.libraries.yml
@@ -27,6 +27,7 @@ cart:
     - alshaya_product_zoom/cloud_zoom_pdp_gallery
     - alshaya_spc/cart_utilities
     - alshaya_master/common_functions
+    - alshaya_spc/dynamic_promotion_label
 
 checkout:
   version: 1.x
@@ -36,6 +37,7 @@ checkout:
     - core/underscore
     - alshaya_react/react
     - alshaya_spc/cart_utilities
+    - alshaya_spc/dynamic_promotion_label
 
 order_details:
   version: 1.x
