CORE-42936: [Promotion Engine] [CART Page] [BE] - Benefits popup on basket for both guest and logged in cusomer.

--- a/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
+++ b/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
@@ -818,6 +818,11 @@ hello-member-otp:
     theme:
       css/conditional-sass/hello-member-otp/hello-member-otp.ltr.css: {}
 
+hello-member-promotion:
+  css:
+    theme:
+      css/conditional-sass/hello-member-promotion/hello-member-promotion.ltr.css: {}
+
 cls-initial-layout-common:
   css:
     theme:
