CORE-42939: Extracted accordion and banner from egift to advanced page.

--- a/docroot/themes/custom/transac/alshaya_boots/alshaya_boots.info.yml
+++ b/docroot/themes/custom/transac/alshaya_boots/alshaya_boots.info.yml
@@ -221,3 +221,8 @@ libraries-override:
     css:
       theme:
         css/conditional-sass/egift-cart/egift-cart.ltr.css: css/conditional-sass/egift-cart/egift-cart.ltr.css
+
+  alshaya_white_label/advanced-page-paragraph-accordion:
+    css:
+      theme:
+        css/conditional-sass/advanced-page-paragraph-accordion/advanced-page-paragraph-accordion.ltr.css: css/conditional-sass/advanced-page-paragraph-accordion/advanced-page-paragraph-accordion.ltr.css
