--- a/docroot/themes/custom/transac/alshaya_bathbodyworks/alshaya_bathbodyworks.info.yml
+++ b/docroot/themes/custom/transac/alshaya_bathbodyworks/alshaya_bathbodyworks.info.yml
@@ -220,3 +220,13 @@ libraries-override:
     css:
       theme:
         css/conditional-sass/egift-card-checkout-confirmation/egift-card-checkout-confirmation.ltr.css: css/conditional-sass/egift-card-checkout-confirmation/egift-card-checkout-confirmation.ltr.css
+
+  alshaya_white_label/advanced-page-paragraph-accordion:
+    css:
+      theme:
+        css/conditional-sass/advanced-page-paragraph-accordion/advanced-page-paragraph-accordion.ltr.css: css/conditional-sass/advanced-page-paragraph-accordion/advanced-page-paragraph-accordion.ltr.css
+
+  alshaya_white_label/advanced-page-paragraph-banner:
+    css:
+      theme:
+        css/conditional-sass/advanced-page-paragraph-banner/advanced-page-paragraph-banner.ltr.css: css/conditional-sass/advanced-page-paragraph-banner/advanced-page-paragraph-banner.ltr.css
