--- a/docroot/themes/custom/transac/alshaya_hnm/alshaya_hnm.info.yml
+++ b/docroot/themes/custom/transac/alshaya_hnm/alshaya_hnm.info.yml
@@ -319,3 +319,13 @@ libraries-override:
     css:
       theme:
         css/conditional-sass/hello-member-aura-loyalty/hello-member-aura-loyalty.ltr.css: css/conditional-sass/hello-member-aura-loyalty/hello-member-aura-loyalty.ltr.css
+
+  alshaya_white_label/advanced-page-paragraph-accordion:
+    css:
+      theme:
+        css/conditional-sass/advanced-page-paragraph-accordion/advanced-page-paragraph-accordion.ltr.css: css/conditional-sass/advanced-page-paragraph-accordion/advanced-page-paragraph-accordion.ltr.css
+
+  alshaya_white_label/advanced-page-paragraph-banner:
+    css:
+      theme:
+        css/conditional-sass/advanced-page-paragraph-banner/advanced-page-paragraph-banner.ltr.css: css/conditional-sass/advanced-page-paragraph-banner/advanced-page-paragraph-banner.ltr.css
