--- a/docroot/themes/custom/transac/alshaya_muji/alshaya_muji.info.yml
+++ b/docroot/themes/custom/transac/alshaya_muji/alshaya_muji.info.yml
@@ -204,3 +204,8 @@ libraries-override:
     css:
       theme:
         css/conditional-sass/aura-loyalty-pdp/aura-loyalty-pdp.ltr.css: css/conditional-sass/aura-loyalty-pdp/aura-loyalty-pdp.ltr.css
+
+  alshaya_white_label/advanced-page-paragraph-accordion:
+    css:
+      theme:
+        css/conditional-sass/advanced-page-paragraph-accordion/advanced-page-paragraph-accordion.ltr.css: css/conditional-sass/advanced-page-paragraph-accordion/advanced-page-paragraph-accordion.ltr.css
