--- a/docroot/themes/custom/transac/alshaya_pottery_barn/alshaya_pottery_barn.info.yml
+++ b/docroot/themes/custom/transac/alshaya_pottery_barn/alshaya_pottery_barn.info.yml
@@ -222,3 +222,8 @@ libraries-override:
     css:
       theme:
         css/conditional-sass/aura-loyalty-forms/aura-loyalty-forms.ltr.css: css/conditional-sass/aura-loyalty-forms/aura-loyalty-forms.ltr.css
+
+  alshaya_white_label/advanced-page-paragraph-accordion:
+    css:
+      theme:
+        css/conditional-sass/advanced-page-paragraph-accordion/advanced-page-paragraph-accordion.ltr.css: css/conditional-sass/advanced-page-paragraph-accordion/advanced-page-paragraph-accordion.ltr.css
