--- a/docroot/themes/custom/transac/alshaya_westelm/alshaya_westelm.info.yml
+++ b/docroot/themes/custom/transac/alshaya_westelm/alshaya_westelm.info.yml
@@ -221,3 +221,13 @@ libraries-override:
     css:
       theme:
         css/conditional-sass/inter-country-transfer/inter-country-transfer.ltr.css: css/conditional-sass/inter-country-transfer/inter-country-transfer.ltr.css
+
+  alshaya_white_label/advanced-page-paragraph-accordion:
+    css:
+      theme:
+        css/conditional-sass/advanced-page-paragraph-accordion/advanced-page-paragraph-accordion.ltr.css: css/conditional-sass/advanced-page-paragraph-accordion/advanced-page-paragraph-accordion.ltr.css
+
+  alshaya_white_label/advanced-page-paragraph-banner:
+    css:
+      theme:
+        css/conditional-sass/advanced-page-paragraph-banner/advanced-page-paragraph-banner.ltr.css: css/conditional-sass/advanced-page-paragraph-banner/advanced-page-paragraph-banner.ltr.css
