--- a/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
+++ b/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
@@ -827,3 +827,13 @@ hello-member-aura-loyalty:
   css:
     theme:
       css/conditional-sass/hello-member-aura-loyalty/hello-member-aura-loyalty.ltr.css: {}
+
+advanced-page-paragraph-accordion:
+  css:
+    theme:
+      css/conditional-sass/advanced-page-paragraph-accordion/advanced-page-paragraph-accordion.ltr.css: {}
+
+advanced-page-paragraph-banner:
+  css:
+    theme:
+      css/conditional-sass/advanced-page-paragraph-banner/advanced-page-paragraph-banner.ltr.css: {}
