CORE-43669: Return empty checkout page.

--- a/docroot/modules/custom/alshaya_xb/alshaya_xb.services.yml
+++ b/docroot/modules/custom/alshaya_xb/alshaya_xb.services.yml
@@ -8,3 +8,8 @@ services:
     arguments: ['@request_stack']
     tags:
       - { name: event_subscriber }
+
+  alshaya_xb.route_subscriber:
+    class: Drupal\alshaya_xb\Routing\RouteSubscriber
+    tags:
+      - { name: event_subscriber }
