CORE-43040: If Customer chooses Aura option, we open a form with three radio button options - Mobile Number, Aura account number and Email address.

--- a/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
+++ b/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
@@ -822,3 +822,8 @@ cls-initial-layout-common:
   css:
     theme:
       css/conditional-sass/cls-initial-layout-common/cls-initial-layout-common.ltr.css: {}
+
+hello-member-aura-loyalty:
+  css:
+    theme:
+      css/conditional-sass/hello-member-aura-loyalty/hello-member-aura-loyalty.ltr.css: {}
