--- a/docroot/themes/custom/transac/alshaya_hnm/alshaya_hnm.info.yml
+++ b/docroot/themes/custom/transac/alshaya_hnm/alshaya_hnm.info.yml
@@ -314,3 +314,8 @@ libraries-override:
     css:
       theme:
         css/conditional-sass/cls-initial-layout-common/cls-initial-layout-common.ltr.css: css/conditional-sass/cls-initial-layout-common/cls-initial-layout-common.ltr.css
+
+  alshaya_white_label/hello-member-aura-loyalty:
+    css:
+      theme:
+        css/conditional-sass/hello-member-aura-loyalty/hello-member-aura-loyalty.ltr.css: css/conditional-sass/hello-member-aura-loyalty/hello-member-aura-loyalty.ltr.css
