--- a/docroot/modules/react/alshaya_hello_member/alshaya_hello_member.info.yml
+++ b/docroot/modules/react/alshaya_hello_member/alshaya_hello_member.info.yml
@@ -5,5 +5,6 @@ package: 'Alshaya'
 core_version_requirement: ^8 || ^9
 dependencies:
   - alshaya_spc:alshaya_spc
+  - alshaya_aura_react:alshaya_aura_react
   - alshaya_react:alshaya_react
   - alshaya_master:alshaya_master
