CORE-43611: Moved shop by block menu into handlebar template.

--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/alshaya_rcs_main_menu.libraries.yml
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/alshaya_rcs_main_menu.libraries.yml
@@ -42,3 +42,8 @@ main_menu_level4_partial:
   version: 1.x
   js:
     handlebars/rcs-main_menu_level4-partial.handlebars: {}
+
+shop_by_menu:
+  version: 1.x
+  js:
+    handlebars/rcs-shop_by_menu.handlebars: {}
