--- a/docroot/modules/react/alshaya_hello_member/config/install/alshaya_hello_member.settings.yml
+++ b/docroot/modules/react/alshaya_hello_member/config/install/alshaya_hello_member.settings.yml
@@ -2,3 +2,11 @@ status: false # Config to enable/disable hello member feature.
 points_history_page_size: 5 # Config to store page size for points history data.
 minimum_age: 18 # Config to store minimum age for users registration
 aura_integration_status: false # Config to enable/disable aura integration with hello member.
+membership_popup_text_above:
+  value: '<p classname="hello-membership-sub-title">Your experience just got better! With the updated <a href="/">Terms &amp; Conditions</a> you\'re now a Member and can enjoy a wide range of benefits and new features. Come and get free delivery and 20% off your next purchase!</p>'
+  format: full_text
+membership_popup_text_above:
+  value: '<p classname="hello-membership-terms"><a href="@hm-terms-url">Click here</a> to read more about Hello Member programme.</p>
+<p classname="hello-membership-terms">Read the updated <a href="@hm-terms-url">Terms &amp; Conditions</a> and <a href="@hm-privacy-policy">Privacy Policy</a></p>
+<p classname="hello-membership-terms">If you don\'t want to be part of the programme, <a href="@hm-contact-us">contact us.</a></p>'
+  format: full_text
