--- a/docroot/modules/react/alshaya_aura_react/config/install/alshaya_aura_react.settings.yml
+++ b/docroot/modules/react/alshaya_aura_react/config/install/alshaya_aura_react.settings.yml
@@ -1,4 +1,4 @@
-aura_enabled: true # Config to enable/disable AURA.
+aura_enabled: false # Config to enable/disable AURA.
 aura_app_store_link: 'https://aura-mena.com/en'
 aura_google_play_link: 'https://aura-mena.com/en'
 aura_rewards_header_learn_more_link: 'user/loyalty-club'
