CORE-38118: Change of base theme as 'stable' and uninstalling cog.

--- a/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.info.yml
+++ b/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.info.yml
@@ -3,7 +3,7 @@ type: theme
 description: 'Transac base theme for Alshaya brands.'
 core: 8.x
 core_version_requirement: ^8 || ^9
-base theme: cog
+base theme: stable
 alshaya_theme_type: transac
 
 regions:
