CORE-42539: Added the event subscriber for hm images cache update.

--- a/docroot/modules/brands/alshaya_hm/alshaya_hm_images/alshaya_hm_images.services.yml
+++ b/docroot/modules/brands/alshaya_hm/alshaya_hm_images/alshaya_hm_images.services.yml
@@ -26,3 +26,10 @@ services:
       - { name: 'event_subscriber' }
     calls:
       - [setSkuAssetManager, ['@?alshaya_media_assets.skuassetsmanager']]
+
+  alshaya_hm_images.product_updated_event:
+    class: Drupal\alshaya_hm_images\EventSubscriber\ProductUpdatedEventSubscriber
+    arguments:
+      - '@alshaya_hm_images.images_helper'
+    tags:
+      - { name: 'event_subscriber' }
