--- a/docroot/modules/custom/alshaya_acm_product/alshaya_acm_product.info.yml
+++ b/docroot/modules/custom/alshaya_acm_product/alshaya_acm_product.info.yml
@@ -17,3 +17,4 @@ dependencies:
   - queue_unique:queue_unique
   - alshaya_seo:alshaya_seo
   - alshaya_brand:alshaya_brand
+  - alshaya_hm_images:alshaya_hm_images
