--- a/docroot/modules/react/alshaya_hello_member/alshaya_hello_member.libraries.yml
+++ b/docroot/modules/react/alshaya_hello_member/alshaya_hello_member.libraries.yml
@@ -34,7 +34,7 @@ alshaya_hello_member_profile_info:
   dependencies:
     - core/drupal
     - core/jquery
-alshaya_become_a_member:
+alshaya_hello_member_become_a_member:
   js:
     dist/become_a_member.bundle.js: {}
   dependencies:
