--- a/docroot/modules/react/alshaya_hello_member/alshaya_hello_member.libraries.yml
+++ b/docroot/modules/react/alshaya_hello_member/alshaya_hello_member.libraries.yml
@@ -34,8 +34,8 @@ alshaya_hello_member_profile_info:
   dependencies:
     - core/drupal
     - core/jquery
-alshaya_hello_member_become_a_member:
+alshaya_hello_member_become_hello_member:
   js:
-    dist/become_a_member.bundle.js: {}
+    dist/become_hello_member.bundle.js: {}
   dependencies:
     - alshaya_react/react
