--- a/docroot/modules/react/alshaya_hello_member/config/optional/block.block.becomeamemberblock_promo.yml
+++ b/docroot/modules/react/alshaya_hello_member/config/optional/block.block.becomeamemberblock_promo.yml
@@ -12,10 +12,10 @@ theme: alshaya_white_label
 region: content
 weight: 18
 provider: null
-plugin: become_a_member_block
+plugin: become_hello_member_block
 settings:
-  id: become_a_member_block
-  label: 'Become a Member block - Promo'
+  id: become_hello_member_block
+  label: 'Become Hello Member block - Promo'
   label_display: '0'
   provider: alshaya_hello_member
 visibility:
