--- a/docroot/themes/custom/transac/alshaya_mothercare/alshaya_mothercare.info.yml
+++ b/docroot/themes/custom/transac/alshaya_mothercare/alshaya_mothercare.info.yml
@@ -132,3 +132,8 @@ libraries-override:
     css:
       theme:
         css/conditional-sass/aura-loyalty-pdp/aura-loyalty-pdp.ltr.css: css/conditional-sass/aura-loyalty-pdp/aura-loyalty-pdp.ltr.css
+
+  alshaya_white_label/online-returns:
+    css:
+      theme:
+        css/conditional-sass/online-returns/online-returns.ltr.css: css/conditional-sass/online-returns/online-returns.ltr.css
