CORE-43614: Moved LHN block menu into handlebar template.

--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_listing/alshaya_rcs_listing.libraries.yml
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_listing/alshaya_rcs_listing.libraries.yml
@@ -27,3 +27,8 @@ carousel.accordion:
   version: 1.x
   js:
     handlebars/alshaya-rcs-carousel-accordion.handlebars: {}
+
+lhn_menu:
+  version: 1.x
+  js:
+    handlebars/rcs-lhn_menu.handlebars: {}
