--- a/tests/behat/templates/variables/common.yml
+++ b/tests/behat/templates/variables/common.yml
@@ -1,6 +1,7 @@
 variables:
   url_login: '/user/login'
-  url_register: '/user/register'
+  url_register: '/user/register?'
+  behat_secret_key: 'behat=6548ffa6b2bc4b7652ba1dc90133b3d0'
   spc_checkout_card: "4543474002249996"
   spc_checkout_expiry: "09/22"
   spc_checkout_cvv: "956"
