--- a/tests/behat/templates/variables/brands/pb/env/prod/markets/ae/ae.yml
+++ b/tests/behat/templates/variables/brands/pb/env/prod/markets/ae/ae.yml
@@ -1,5 +1,5 @@
 variables:
-  spc_product_listing_page: '/shop-outdoor/shop-category/outdoor-dining-furniture/'
-  spc_basket_page: '/shop-outdoor/shop-category/outdoor-dining-furniture/'
-  spc_pdp_page: '/buy-hampton-all-weather-wicker-dining-armchair-natural.html/'
-  product_listing_page_url: "/shop-outdoor/shop-category/outdoor-dining-furniture/"
+  spc_product_listing_page: '/shop-bedding/'
+  spc_basket_page: '/shop-bedding/'
+  spc_pdp_page: '/buy-jacquard-linen-medallion-duvet-cover-sham-soft-rose.html/'
+  product_listing_page_url: "/shop-bedding/"
