--- a/tests/behat/templates/variables/brands/vs/env/uat/markets/ae/ae.yml
+++ b/tests/behat/templates/variables/brands/vs/env/uat/markets/ae/ae.yml
@@ -2,4 +2,4 @@ variables:
   spc_product_listing_page: '/victorias-secret/shop-mapp/'
   spc_basket_page: '/victorias-secret/shop-mapp/'
   product_listing_page_url: '/victorias-secret/shop-mapp/'
-  spc_pdp_page: '/buy-pink-dog-bath-bomb.html/'
+  spc_pdp_page: '/beauty/buy-fragrant-body-lotion-beach-flower.html/'
