--- a/tests/behat/templates/variables/brands/westelm/env/uat/markets/ae/ae.yml
+++ b/tests/behat/templates/variables/brands/westelm/env/uat/markets/ae/ae.yml
@@ -1,6 +1,6 @@
 variables:
-  url_product_page: 'buy-ashby-extra-wide-dresser.html'
-  product_listing_page_url: '/shop-bedding-bath/bedding-category/duvet-covers/'
-  spc_product_listing_page: '/shop-bedding-bath/bedding-category/duvet-covers/'
-  spc_basket_page: '/shop-bedding-bath/bedding-category/duvet-covers/'
-  spc_pdp_page: 'buy-400-thread-count-organic-sateen-embroidered-duvet-cover-shams.html'
+  url_product_page: '/buy-axel-leather-sofa-89.html/'
+  product_listing_page_url: '/shop-furniture/'
+  spc_product_listing_page: '/shop-furniture/'
+  spc_basket_page: '/shop-furniture/'
+  spc_pdp_page: '/buy-axel-leather-sofa-89.html/'
