--- a/docroot/modules/brands/alshaya_cos/modules/alshaya_cos_transac_rcs/alshaya_cos_transac_rcs.info.yml
+++ b/docroot/modules/brands/alshaya_cos/modules/alshaya_cos_transac_rcs/alshaya_cos_transac_rcs.info.yml
@@ -4,3 +4,4 @@ type: module
 core_version_requirement: ^9
 dependencies:
   - alshaya_cos:alshaya_cos_transac
+  - alshaya_pims_assets:alshaya_pims_assets
