CORE-43689: Added handlebars template for sitemap page.

--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_seo/alshaya_rcs_seo.libraries.yml
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_seo/alshaya_rcs_seo.libraries.yml
@@ -15,3 +15,8 @@ alshaya_rcs_product_seo:
   dependencies:
     - core/drupal
     - alshaya_acm_product/product_utility
+
+sitemap:
+  version: 1x
+  js:
+    handlebars/alshaya-rcs-sitemap.handlebars: {}
