CORE-43662: UAT fixes updated.

--- a/tests/behat/templates/variables/brands/bbw/env/uat/markets/kw/kw.yml
+++ b/tests/behat/templates/variables/brands/bbw/env/uat/markets/kw/kw.yml
@@ -2,7 +2,7 @@ variables:
   url_product_page: 'buy-slub-jersey-henley-shirt-green-grey-marl-0.html'
   product_listing_page_url: "/shop-body-care/bath-shower/all-bath-shower/"
   spc_product_listing_page: '/shop-body-care/bath-shower/all-bath-shower/'
-  spc_pdp_page: 'buy-thousand-wishes-shimmer-hair-perfume.html'
+  spc_pdp_page: '/buy-hula-pineapple-visor-clip-car-fragrance-holder.html/'
   spc_basket_page: '/shop-body-care/bath-shower/all-bath-shower/'
   spc_promotion_listing_page: '/shop-body-care/bath-shower/all-bath-shower/'
   spc_single_product_detail_page_coupon: '/buy-dark-kiss-bathtub-gift-set-1.html/'
