CORE-15078: Moved the get user orders function to orderManager service.

--- a/docroot/modules/custom/alshaya_acm_customer/alshaya_acm_customer.services.yml
+++ b/docroot/modules/custom/alshaya_acm_customer/alshaya_acm_customer.services.yml
@@ -13,6 +13,9 @@ services:
       - '@language_manager'
       - '@logger.factory'
       - '@cache.orders_count'
+      - '@acq_sku.product_info_helper'
+      - '@request_stack'
+      - '@module_handler'
 
   alshaya_acm_customer.helper:
     class: Drupal\alshaya_acm_customer\CustomerHelper
