--- a/tests/behat/templates/variables/brands/aeo/env/uat/markets/sa/sa.yml
+++ b/tests/behat/templates/variables/brands/aeo/env/uat/markets/sa/sa.yml
@@ -1,7 +1,7 @@
 variables:
-  spc_product_listing_page: '/#query=jean/'
-  spc_basket_page: '/#query=jean/'
-  product_listing_page_url: "/#query=jean/"
-  np_plp_page: '/#query=jean/'
+  spc_product_listing_page: '/american-eagle/shop-jeans/'
+  spc_basket_page: '/american-eagle/shop-jeans/'
+  product_listing_page_url: "/american-eagle/shop-jeans/"
+  np_plp_page: '/american-eagle/shop-jeans/'
   np_plp_product_page: '/buy-ae-active-full-zip-jacket-navy.html/'
   spc_pdp_page: '/buy-ae-active-full-zip-jacket-navy.html/'
