--- a/docroot/modules/react/package.json
+++ b/docroot/modules/react/package.json
@@ -75,6 +75,7 @@
     "moment": "^2.27.0",
     "moment-range": "^4.0.2",
     "moment-timezone": "^0.5.31",
+    "otp-timer": "^1.1.5",
     "promise-polyfill": "8.1.3",
     "react": "^16.9.0",
     "react-add-to-calendar": "^0.1.5",
