CORE-43689: Added hook to add description field to category query.

--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/alshaya_rcs_main_menu.services.yml
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/alshaya_rcs_main_menu.services.yml
@@ -9,6 +9,7 @@ services:
       - '@path_alias.manager'
       - '@cache.data'
       - '@database'
+      - '@module_handler'
   alshaya_rcs_main_menu.category_data_migration:
     class: Drupal\alshaya_rcs_main_menu\Service\AlshayaRcsCategoryDataMigration
     arguments:
