CORE-43737: Updated the click and collect check for online return item.

--- a/docroot/modules/react/alshaya_online_returns/alshaya_online_returns.services.yml
+++ b/docroot/modules/react/alshaya_online_returns/alshaya_online_returns.services.yml
@@ -4,6 +4,7 @@ services:
     arguments:
       - '@config.factory'
       - '@entity_type.manager'
+      - '@alshaya_acm_checkout.options_manager'
 
   alshaya_online_returns.online_returns_api_helper:
     class: Drupal\alshaya_online_returns\Helper\OnlineReturnsApiHelper
