CO-101: COD mobile optimisation initial FE commit.

--- a/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
+++ b/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
@@ -822,3 +822,8 @@ cls-initial-layout-common:
   css:
     theme:
       css/conditional-sass/cls-initial-layout-common/cls-initial-layout-common.ltr.css: {}
+
+checkout-cod-mobile-verification:
+  css:
+    theme:
+      css/conditional-sass/checkout-cod-mobile-verification/checkout-cod-mobile-verification.ltr.css: {}
